--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -3,28 +3,24 @@ events {
 }
 
 stream {
-    # define a TCP server listening on the port 1234:
+    lua_package_path '$prefix/lua/?.lua;;';
+    lua_code_cache off;
+    #log_not_found off;
+    error_log logs/error.log debug;   #指定错误日志文件路径
+
+    lua_socket_connect_timeout 10s;                                  # cosocket 连接超时
+    lua_socket_send_timeout 10s;                                     # cosocket 发送超时
+    lua_socket_read_timeout 10s;                                     # cosocket 接收超时
+    lua_socket_pool_size 500;                                        # cosocket 连接池大小
+    lua_socket_keepalive_timeout 10s;                               # cosocket 空闲时间
+    lua_socket_buffer_size 1k;                                      # cosocket 缓存大小
+    lua_check_client_abort on;                                      # 检测客户端断连
+    lua_max_pending_timers 100;                                     # 定时器数量
+    lua_shared_dict sheme 5m;                                       # 共享内存
+    
     server {
+        # define a TCP server listening on the port 1234:
         listen 8090;
-
-        content_by_lua_block {
-            local sock, err = ngx.req.socket()
-            if not sock then
-                ngx.exit(500)
-            end
-            while true do
-                local data
-                data, err = sock:receive('*l')
-                if not data then
-                    return ngx.exit(200)
-                end
-
-                local sent
-                sent, err = sock:send(data .. '\n')
-                if err then
-                    return ngx.exit(200)
-                end
-            end
-        }
+        content_by_lua_file lua/server.lua;
     }
 }
