add rh first version

--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -2,25 +2,45 @@ events {
     worker_connections 1024;
 }
 
-stream {
+env PATH;
+env PWD;
+
+http {
     lua_package_path '$prefix/lua/?.lua;;';
     lua_code_cache off;
     #log_not_found off;
     error_log logs/error.log debug;   #指定错误日志文件路径
 
-    lua_socket_connect_timeout 10s;                                  # cosocket 连接超时
-    lua_socket_send_timeout 10s;                                     # cosocket 发送超时
-    lua_socket_read_timeout 10s;                                     # cosocket 接收超时
-    lua_socket_pool_size 500;                                        # cosocket 连接池大小
-    lua_socket_keepalive_timeout 10s;                               # cosocket 空闲时间
-    lua_socket_buffer_size 1k;                                      # cosocket 缓存大小
-    lua_check_client_abort on;                                      # 检测客户端断连
-    lua_max_pending_timers 100;                                     # 定时器数量
-    lua_shared_dict sheme 5m;                                       # 共享内存
-    
+    lua_socket_connect_timeout 10s;     # cosocket 连接超时
+    lua_socket_send_timeout 10s;        # cosocket 发送超时
+    lua_socket_read_timeout 10s;        # cosocket 接收超时
+    lua_socket_pool_size 500;           # cosocket 连接池大小
+    lua_socket_keepalive_timeout 10s;   # cosocket 空闲时间
+    lua_socket_buffer_size 1k;          # cosocket 缓存大小
+    lua_check_client_abort on;          # 检测客户端断连
+    lua_max_pending_timers 100;         # 定时器数量
+    lua_shared_dict lmdlock 1m;         # 共享内存
+
+    init_worker_by_lua_file lua/init/init.lua;
+    include ./mime.types;
+    default_type application/octet-stream;
+
     server {
-        # define a TCP server listening on the port 1234:
-        listen 8090;
-        content_by_lua_file lua/server.lua;
+        listen 8081;
+        ssl_session_tickets off;
+        resolver 8.8.8.8 valid=45s;
+
+        location ~ ^/api/([a-zA-Z0-9]+) {
+          content_by_lua_file lua/api/$1.lua;
+        }
+
+        location = /favicon.ico {
+          alias html/favicon.ico;
+        }
+
+        location / {
+          root html;
+          index index.html index.htm;
+        }
     }
 }
