--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -26,6 +26,9 @@ http {
     include ./mime.types;
     default_type application/octet-stream;
 
+    client_body_buffer_size 10M;
+    client_max_body_size 5M;
+
     server {
         listen 8081;
         ssl_session_tickets off;
